syntax = "proto3";

package service;

option go_package = "grpc";

service Schedule {
	rpc GetEpisode(GetEpisodeRequest) returns (ProgramEpisodeDetails) {}
	rpc GetRandomEpisode(GetRandomEpisodeRequest) returns (ProgramEpisodeDetails) {}
	rpc PutProgram(PutProgramRequest) returns (Program) {}
	rpc PutProgramScheduleEntry(PutProgramScheduleEntryRequest) returns (ProgramScheduleEntry) {}
	rpc PutProgramEpisode(PutProgramEpisodeRequest) returns (ProgramEpisode) {}
}

message GetEpisodeRequest {
	string offset = 1;
}

message GetRandomEpisodeRequest {
	string max_duration = 1;
}

message PutProgramRequest {
	string name = 1;
	string host_name = 2;
	string duration = 3;
}

message PutProgramScheduleEntryRequest {
	string program_id = 1;
	int32 weekday = 2;
	int32 hour = 3;
}

message PutProgramEpisodeRequest {
	string program_id = 1;
	string name = 2;
	string air_date = 3;
	string recording_path = 4;
}

message Program {
	string id = 1;
	string name = 2;
	string host_name = 3;
	string duration = 4;
}

message ProgramScheduleEntry {
	string id = 1;
	string program_id = 2;
	int32 weekday = 3;
	int32 hour = 4;
}

message ProgramEpisode {
	string id = 1;
	string program_id = 2;
	string name = 3;
	string air_date = 4;
	string recording_path = 5;
}

message ProgramEpisodeDetails {
	string name = 1;
	string host_name = 2;
	string episode_name = 3;
	string start_offset = 4;
	string duration = 5;
	string air_date = 6;
	string recording_path = 7;
}
